--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Desmon Garrison",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4"
   }
 }
